--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item 
+
+    <item
         android:id="@+id/create_note"
-        android:title="@string/create" 
-        />
-        
+        android:title="@string/create"/>
+    
+    <item
+        android:id="@+id/Exit"
+        android:title="@string/exit"/>
 
 </menu>
