--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,9 +4,11 @@
     <item
         android:id="@+id/create_note"
         android:title="@string/create"/>
-    
     <item
         android:id="@+id/Exit"
         android:title="@string/exit"/>
+    <item
+        android:id="@+id/search"
+        android:title="@string/search"/>
 
 </menu>
